--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 547 -
+[2008/09/30] RabidCh - Added DEF2.
+[2008/09/30] RabidCh - Added Critical (Not FalseCritical).
+[2008/09/30] RabidCh - Slightly simplified MATK calculation.
+-
+
 - Rev 546 -
 [2008/09/29] RaX - Added dynamic loading switch into Zone.ini, game section.
 -
