- Rev 549 - [2008/09/30] Aeomin - Phase III of Item Drop.  [Still working on it!!!] -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 549 -
+[2008/09/30] Aeomin - Phase III of Item Drop.
+ [Still working on it!!!] 
+-
+
 - Rev 548 -
 [2008/09/30] RabidCh - Added MDEF2.
 -
