--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 551 -
+[2008/09/30] Aeomin - Changed bunch of TBeing to TGameObject.
+-
+
 - Rev 550 -
 [2008/09/30] Aeomin - Added TGameObject.
 -
