--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 552 -
+[2008/10/01] Aeomin - Phase IIII of drop item.
+[2008/10/01] Aeomin - Fixed item duplicates after warp.
+[2008/10/01] Aeomin - Items show on ground now.
+-
+
 - Rev 551 -
 [2008/09/30] Aeomin - Changed bunch of TBeing to TGameObject.
 -
