--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 555 -
+[2008/10/01] Aeomin - Fixed Weight not always update
+-
+
 - Rev 554 -
 [2008/10/01] Aeomin - Small clean up of TInventory
 -
