--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 556 -
+[2008/10/01] RaX - Added script command getitem.
+-
+
+
 - Rev 555 -
 [2008/10/01] Aeomin - Fixed Weight not always update
 -
