--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 558 -
+[2008/10/02] RabidCh - Added ATK in status window, but still very incomplete due to many stuff involved with it.
+[2008/10/02] RabidCh - Added 1 in CalcCritical calculation.
+-
+
 - Rev 557 -
 [2008/10/01] Aeomin - Added ParameterList.pas that does nothing right now.
 -
