--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 560 -
+[2008/10/02] Aeomin - Drop item packet now sends to surrounding players.
+-
+
 - Rev 559 -
 [2008/10/02] Aeomin - TParameterList in place!
 -
