--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 561 -
+[2008/10/03] Tsusai - Added Build.bat for one click compiling in the MISC folder.
+-
+
 - Rev 560 -
 [2008/10/02] Aeomin - Drop item packet now sends to surrounding players.
 -
