--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 562 -
+[2008/10/03] Tsusai - SVN updating added to, but commented out in Build.bat
+-
+
 - Rev 561 -
 [2008/10/03] Tsusai - Added Build.bat for one click compiling in the MISC folder.
 -
