--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 566 -
+[2008/10/03] Aeomin - Preparation for item pickup.
+-
+
 - Rev 565 -
 [2008/10/03] Tsusai - Added TAccount.Passkey for new MD5 password work.  Will
  not run without updated SQL table.
