--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 567 -
+[2008/10/03] Aeomin - Added AmountOf in Inventory.
+-
+
 - Rev 566 -
 [2008/10/03] Aeomin - Preparation for item pickup.
 -
