--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 570 -
+[2008/10/03] Aeomin - Splitted Add procedure into Move [Inventory.pas]
+[2008/10/03] Aeomin - This not only provides clean code but also could reuse for pickup item.
+-
+
 - Rev 569 -
 [2008/10/03] Aeomin - Fixed a bug in item drop.
 -
