--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 580 -
+[2008/10/04] Aeomin - Added generate storage ID in M/F registration.
+-
+
 - Rev 579 -
 [2008/10/04] Aeomin - Fixed Attack animation.
 -
