--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 586 -
+[2008/10/05] RaX - Made Item Pickup threadsafe. Added critical section in zonerecv.takeitem
+-
+
 - Rev 585 -
 [2008/10/05] RaX - Fixed character's being able to click multiple times to
  attack multiple times when they should have only attacked once.
