--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 590 -
+[2008/10/08] RaX - Cleaned up attacking, made it use arealoop.
+-
+
 - Rev 589 -
 [2008/10/08] Aeomin - Added checks in Inventory to prevent drop equipped item.
 -
