--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 596 -
+[2008/10/10] Aeomin - Fixed #die
+-
+
 - Rev 595 -
 [2008/10/10] Aeomin - Fixed #effect
 -
