--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 597 -
+[2008/10/10] Aeomin - commented out IsEquipped for some of you having error.
+ (Eventually this will be replaced anyways)
+-
+
 - Rev 596 -
 [2008/10/10] Aeomin - Fixed #die
 -
