--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 603 -
+[2008/10/11] Aeomin - Now equip items are stored in db and shown equipment window
+  after login.
+-
+
 - Rev 602 -
 [2008/10/11] Aeomin - Character server now creates default items for new characters.
 [2008/10/10] Aeomin - More work on equipment
