--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 605 -
+[2008/10/11] Aeomin - Fixed sprite id
+-
+
 - Rev 604 -
 [2008/10/11] Aeomin - Fixed can't unequip after login
 -
@@ -45,7 +49,7 @@ NO TEACHY WHILE SICKIE.
 -
 
 - Rev 598 -
-[2008/10/10] Aeomin - Fixed a mistaked caused item not drop or drop wrong one.
+[2008/10/10] Aeomin - Fixed a mistake caused item not drop or drop wrong one.
 -
 
 - Rev 597 -
