--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 606 -
+[2008/10/11] Aeomin - Added input() script function
+-
+
 - Rev 605 -
 [2008/10/11] Aeomin - Fixed sprite id
 -
