--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 608 -
+[2008/10/11] Aeomin - Added broadcastinmap()
+-
+
 - Rev 607 -
 [2008/10/11] Aeomin - Now comes inputstr()
 -
