--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 609 -
+[2008/10/11] RabidCh - Alleviated diagonal walking speed, seems Aegis likes it a little slower.
+-
+
 - Rev 608 -
 [2008/10/11] Aeomin - Added broadcastinmap()
 -
