--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 616 -
+[2008/10/14] Aeomin - Added condition check of broken equipment.
+[2008/10/14] Aeomin - Removed error message for unidentified.
+[2008/10/14] Aeomin - Can't get job check yet..
+-
+
 - Rev 615 -
 [2008/10/13] Aeomin - Now updates view when equip/unequip.
 -
