--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 620 -
+[2008/10/21] RaX - added typed character variables for script.
+[2008/10/21] RaX - replaced instances of Writeln with console.message
+-
+
 - Rev 619 -
 [2008/10/18] Aeomin - Fixed HINTS.
 -
