--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 622 -
+[2008/10/21] Aeomin - Implemented character rename during character select.
+-
+
 - Rev 621 -
 [2008/10/21] RaX - Forgot we should return an integer by default to lua, fixed.
 -
