--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,21 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 629 -
+[2008/11/17] Tsusai - Notes/Overview: Added framework for Item script system.
+ Required Script Rev 77
+[2008/11/17] Tsusai - HELIOS.DPR: Fixed stupid MadDisaim usage, put it BACK inside
+ with MadExcept.
+[2008/11/17] Tsusai - Added LuaTypes (needed to avoid circular reference).
+[2008/11/17] Tsusai - Added LuaItemCommands.
+[2008/11/17] Tsusai - LuaNPCCore / LuaCoreRoutines: Reorganized, moved runtime
+ procedures/functions from NPC to Core, and renamed for clarity.  Fixed error
+ messages to show properly on the console, with "[Zone Server - Lua]" prefix.
+[2008/11/17] Tsusai - LuaNPCCommands & Character: Uses update.
+[2008/11/17] Tsusai - Equipment & NPC: Updated lua execution calls for above update
+[2008/11/17] Tsusai - ZoneServer: Updated Uses, added "ItemLua", and execution calls
+-
+
 - Rev 628 -
 [2008/11/07] Aeomin - Equipments now calls script function when onequip and ondisarm.
 -
